<resources>
    <string name="app_name">GMD</string>
    <string name="GMD_Heading">GMD Field Service Report</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="passwordText">To gain access to your account please call the number below:</string>
    <string name="prompt_text">Select a option</string>
    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Select an option</item>
        <item>Afghanistan</item>
        <item>Akrotiri</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Ashmore and Cartier Islands</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas, The</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Bassas da India</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burma</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Clipperton Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo, Democratic Republic of the</item>
        <item>Congo, Republic of the</item>
        <item>Cook Islands</item>
        <item>Coral Sea Islands</item>
        <item>Costa Rica</item>
        <item>Cote d Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Dhekelia</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Europa Island</item>
        <item>Falkland Islands (Islas Malvinas)</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guian</item>
        <item>French Polynesia</item>
        <item>French Southern and Antarctic Lands</item>
        <item>Gabon</item>
        <item>Gambia, The</item>
        <item>Gaza Strip</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Glorioso Islands</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Holy See (Vatican City)</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Jan Mayen</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Juan de Nova Island</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea, North</item>
        <item>Korea, South</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia, Federated States of</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Navassa Island</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paracel Islands</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn Islands</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia and Montenegro</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>Spain</item>
        <item>Spratly Islands</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tromelin Island</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Virgin Islands</item>
        <item>Wake Island</item>
        <item>Wallis and Futuna</item>
        <item>West Bank</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="plant_type_prompt">Choose a plant type</string>
    <string-array name="plant_type_array">
        <item>Select an option</item>
        <item>GMD</item>
        <item>Drive</item>
        <item>Transformer</item>
        <item>Cyclo</item>
        <item>E-House</item>
        <item>Motor</item>
    </string-array>
    <string-array name="cyclo_convertor_array">
        <item>Select an option</item>
        <item>Cyclo Convertor</item>
        <item>Spare parts &amp; tools</item>
    </string-array>
    <string name="material_prompt">Select an option</string>
    <string-array name="material_array">
        <item>Select an option</item>
        <item>Material Category #1</item>
        <item>Material Category #2</item>
        <item>Material Category #3</item>
        <item>Material Category #4</item>
        <item>Material Category #5</item>
        <item>Material Category #6</item>
    </string-array>
    <string name="time_frame_prompt">Please select an option</string>
    <string-array name="time_frame_array">
        <item>Please select an option</item>
        <item>Hours</item>
        <item>1 day</item>
        <item>2 day</item>
        <item>1 month</item>
        <item>2 month</item>
        <item>1 year</item>
        <item>TBD</item>
    </string-array>
    <string name="location_prompt">Please select an option</string>
    <string-array name="location_array">
        <item>Please select an option</item>
        <item>Feed side</item>
        <item>Discharge side</item>
        <item>Other</item>
    </string-array>
    <string name="position_prompt">Please select an option</string>
    <string name="saveandcomplete">Save &amp; Complete</string>
    <string name="CANCEL">Cancel</string>
    <string name="PLANT_TYPE">Plant Type</string>
    <string name="CALL_FOR_ASSISTANCE">Call 123-123-1234 for assistance</string>
    <string name="PLEASE_ENTER_PASSWORD">Please enter password</string>
    <string name="EIGHT_DIGITS">Eight digits</string>
    <string name="PASSWORD_DID_NOT_MATCH">Password did not match. Try again.</string>
    <string name="CONFIRM">Confirm</string>
    <string name="ITEM_KEY_BAR">ITEM (Key Bar)</string>
    <string name="NUMBERING">NUMBERING</string>
    <string name="CLOCKWISE_SEND">Clockwise send from Feeder side. No.1: First core bolt clockwise from vertical axis
    </string>
    <string name="HOLDING_PLATES_CENTER_HEADING">Condition of Holding Plates</string>
    <string name="HOLDING_PLATE_1">Holding Plate 1</string>
    <string name="HOLDING_PLATE_2">Holding Plate 2</string>
    <string name="HOLDING_PLATE_3">Holding Plate 3</string>
    <string name="CONNECTION_SIDE">Connection Side</string>
    <string name="CENTER">Center</string>
    <string name="NON_CONNECTION_SIDE_SIDE">NON Connection Side Side</string>
    <string name="PLANT_TYPE_GMD">GMD</string>
    <string name="PLANT_TYPE_TRANSFORMER">Transformer</string>
    <string name="PLANT_TYPE_EHOUSE">E-House</string>
    <string name="PLANT_TYPE_DRIVE">Drive</string>
    <string name="PLANT_TYPE_CYCLO">Cyclo</string>
    <string name="PLANT_TYPE_MOTOR">Motor</string>
</resources>