<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="200dp"
    android:layout_gravity="center_vertical"
    android:background="@color/bg_page_color" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@android:color/transparent"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/textview_callServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:autoLink="phone"
            android:gravity="center"
            android:text="@string/CALL_FOR_ASSISTANCE"
            android:textColor="@color/textview_text_color"
            android:textSize="20sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/textview_callServer" />

        <TextView
            android:id="@+id/textview_passcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/PLEASE_ENTER_PASSWORD"
            android:textColor="@color/textview_text_color"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edittext_passcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_passcode"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dip"
            android:layout_marginTop="4dp"
            android:digits="0123456789"
            android:hint="@string/EIGHT_DIGITS"
            android:inputType="phone"
            android:maxLength="8"
            android:password="true"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

        <TextView
            android:id="@+id/txtError"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/edittext_passcode"
            android:layout_marginLeft="20dp"
            android:text="@string/PASSWORD_DID_NOT_MATCH"
            android:textColor="#cc0000"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_confirmresetpasscode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtError"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dp"
            android:text="@string/CONFIRM" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/button_confirmresetpasscode" />
    </RelativeLayout>

</ScrollView>