<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_ser_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_service_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/plant_type_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.7"
                android:gravity="left"
                android:text="@string/PLANT_TYPE"
                android:textColor="@color/textview_text_color"
                android:textSize="@dimen/normal_text_size" />

            <!-- radio button -->

            <LinearLayout
                android:id="@+id/radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TableLayout
                    android:id="@+id/tl_service_type_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TableRow
                        android:id="@+id/rb_row1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <CheckBox
                            android:id="@+id/cb_gmd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:text="@string/PLANT_TYPE_GMD"
                            android:textColor="@color/textview_text_color"
                            android:textSize="@dimen/normal_text_size" />

                        <CheckBox
                            android:id="@+id/cb_transformer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:text="@string/PLANT_TYPE_TRANSFORMER"
                            android:textColor="@color/textview_text_color"
                            android:textSize="@dimen/normal_text_size" />

                        <CheckBox
                            android:id="@+id/cb_ehouse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:text="@string/PLANT_TYPE_EHOUSE"
                            android:textColor="@color/textview_text_color"
                            android:textSize="@dimen/normal_text_size" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/rb_row2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <CheckBox
                            android:id="@+id/cb_drive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:text="@string/PLANT_TYPE_DRIVE"
                            android:textColor="@color/textview_text_color"
                            android:textSize="@dimen/normal_text_size" />

                        <CheckBox
                            android:id="@+id/cb_cyclo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:text="@string/PLANT_TYPE_CYCLO"
                            android:textColor="@color/textview_text_color"
                            android:textSize="@dimen/normal_text_size" />

                        <CheckBox
                            android:id="@+id/cb_motor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:text="@string/PLANT_TYPE_MOTOR"
                            android:textColor="@color/textview_text_color"
                            android:textSize="@dimen/normal_text_size" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>